--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyMp5orN0Z4jG6TGWmGfCExL",
+      "authorship_tag": "ABX9TyM8mzozp2V3wD1JhJ/TeNyL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Hyperparameters to modify ✈:\n",
+        "# Hyperparameters and Preprocessing Settings ✈:\n",
         "⏳⏳⏳⏳⏳⏳⏳⏳⏳⏳⏳\n",
         "\n",
         "⏬⏬⏬⏬⏬⏬⏬⏬⏬⏬⏬\n",
@@ -296,6 +296,19 @@
       ],
       "metadata": {
         "id": "Pocl66Ni5nsd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Define hyperparameters for data augmentation and preprocessing for both Stirling and Addis datasets. These hyperparameters control whether certain transformations, such as flipping, color jittering, and Gaussian blur, are applied to the images.\n",
+        "\n",
+        "Define the batch size, number of classes, number of epochs, training ratio, optimizer choice, learning rate, weight decay, and model choice for training the neural network.\n",
+        "\n",
+        "  ✈"
+      ],
+      "metadata": {
+        "id": "f9LBCSCz4qhh"
       }
     },
     {
@@ -377,9 +390,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Define image transformations \n",
         "\n",
-        "Augumentation"
+        "\n",
+        "Data Augmentation\n",
+        "\n",
+        "Define a class called IdentityTransform that does nothing to the input image. This class is used as a placeholder when certain transformations are not applied.\n",
+        "\n",
+        "Define two sets of image transformations for both datasets, stir_transform and addis_transform, using the specified hyperparameters.\n"
       ],
       "metadata": {
         "id": "mLBxciPMU1H0"
@@ -438,20 +455,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "class Custom Datasets with hyperparameters"
+        "Custom dataset class with image preprocessing techniques"
       ],
       "metadata": {
         "id": "BTe3TMZjbDmf"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "This code defines a custom dataset class for loading and pre-processing images from a given directory. It includes options for applying various pre-processing techniques such as sharpening, histogram equalization, contrast stretching, and denoising. The class also provides the option to apply data augmentation techniques using a provided transform function. The dataset is loaded by iterating over the image paths and labels of each image in the given directory. The pre-processed image and its corresponding label are returned by the getitem method."
+      ],
       "metadata": {
-        "id": "YEoH3H4hHKze"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "YuAAq9wP61jd"
+      }
     },
     {
       "cell_type": "code",
@@ -555,36 +572,9 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ABf4JtNVHK5n"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Create a custom dataset class"
-      ],
-      "metadata": {
-        "id": "1iTcJC_dU_nL"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VM-ZZVCJ-c_k"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Load datasets and create dataloaders"
+        "Creation of DataLoader Objects for Stirling and Addis Datasets"
       ],
       "metadata": {
         "id": "4jR0YaJdVWX9"
@@ -609,7 +599,12 @@
         "                             apply_histogram_equalization=addis_apply_histogram_equalization,\n",
         "                             apply_contrast_stretching=addis_apply_contrast_stretching,\n",
         "                             apply_denoising=addis_apply_denoising,\n",
-        "                             input_size=addis_input_size)"
+        "                             input_size=addis_input_size)\n",
+        "\n",
+        "# Create the dataloader objects for each dataset\n",
+        "\n",
+        "stir_dataloader = DataLoader(stir_dataset, batch_size=batch_size, shuffle=True)\n",
+        "addis_dataloader = DataLoader(addis_dataset, batch_size=batch_size, shuffle=True)\n"
       ],
       "metadata": {
         "id": "82DEjs5bEJW9"
@@ -618,24 +613,11 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "# Create the dataloader objects for each dataset\n",
-        "\n",
-        "stir_dataloader = DataLoader(stir_dataset, batch_size=batch_size, shuffle=True)\n",
-        "addis_dataloader = DataLoader(addis_dataset, batch_size=batch_size, shuffle=True)\n"
-      ],
-      "metadata": {
-        "id": "n7exNQi_Vayx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "# Plotting the results"
+        "### Image Preview Function for Custom Datasets\n",
+        "\n",
+        "The code defines a function to denormalize an image tensor, and another function to preview a selection of images from the datasets. The preview_images function uses the denormalize function to convert the image tensor back to the original pixel values. The labels_map dictionary maps the numerical labels to their corresponding class names. The function is called twice to preview images from the Stirling and Addis datasets."
       ],
       "metadata": {
         "id": "u_Jina-edyST"
@@ -716,15 +698,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Ra34zU_0owtk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 5. Proposed Solution"
@@ -736,7 +709,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "new code"
+        "### Functions raining and Evaluating a Deep Learning Model\n",
+        "\n",
+        "The train_model function trains the model using a given dataloader, criterion, optimizer, and device. The test_model function evaluates the model on a given dataloader and returns the accuracy, predicted labels, and true labels. The evaluate_model function trains and evaluates the model for a given number of epochs, optimizer choice, learning rate, momentum, and weight decay. It also computes the F1 score and ROC AUC score of the model. Finally, the plot_epoch_graphs function plots the training and validation loss and accuracy values over the epochs of training."
       ],
       "metadata": {
         "id": "qAQjw4B6JxCs"
@@ -859,31 +834,15 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IUMjx4D-MAso"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "MOdel initilization"
+        "### Model Initialization for Transfer Learning\n",
+        "\n",
+        "Explanation: The code initializes a pre-trained model from a selection of popular architectures, such as ResNet, VGG, and DenseNet, and replaces the last layer to match the number of classes in the dataset. The function initialize_model takes the model_name, num_classes, and use_pretrained parameters to create and modify the model architecture accordingly. The initialized models are stored in model_stir and model_addis variables, and moved to the available device using the to method."
       ],
       "metadata": {
         "id": "VoiA5nbbDx69"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "x3FkPEtPi0dK"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -913,35 +872,17 @@
         "        num_features = model.classifier.in_features\n",
         "        model.classifier = nn.Linear(num_features, num_classes)\n",
         "\n",
-        "    return model\n"
-      ],
-      "metadata": {
-        "id": "yGQVJlb-Imm7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# torch.cuda.empty_cache()\n"
-      ],
-      "metadata": {
-        "id": "seog9GPshBv8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "    return model\n",
+        "\n",
+        "# torch.cuda.empty_cache()\n",
+        "\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "model_stir = initialize_model(model_name=model_name, num_classes=3, use_pretrained=use_pretrained).to(device)\n",
         "model_addis = initialize_model(model_name=model_name, num_classes=3, use_pretrained=use_pretrained).to(device)\n"
       ],
       "metadata": {
-        "id": "0Lqa6fa5jzwv"
+        "id": "yGQVJlb-Imm7"
       },
       "execution_count": null,
       "outputs": []
@@ -956,13 +897,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Experimental Tests and Evaluations with Cross-Dataset Evaluations\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ehuS-3KG-dFq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Experimental tests and evaluations\n",
         "# E1 - Training the models\n",
-        "\n",
-        "\n",
-        "# num_classes = 3\n",
         "\n",
         "# Train and evaluate models for both cities\n",
         "\n",
